Fix table overflow

--- a/source/_static/css/custom.css
+++ b/source/_static/css/custom.css
@@ -1,5 +1,5 @@
 .wy-nav-content {
-    max-width: none;
+    max-width: max-content;
 }
 .wy-side-nav-search > a img.logo, .wy-side-nav-search .wy-dropdown > a img.logo {
     max-width: 75%;
@@ -7,4 +7,8 @@
 
 body {
 	font-family: sans-serif;
+}
+
+.wy-table-responsive > table > tbody > tr > td{
+    white-space: normal;
 }
